[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Overlap/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/Sprites/pumpkin_bullet.png" type="Texture" id=2]
[ext_resource path="res://Resources/Projectiles/PumpkinBullet.gd" type="Script" id=3]
[ext_resource path="res://Sounds/pumpkin_shoot.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 4.5 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Spin"
length = 0.4
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="PumpkinBullet" groups=["Projectile"] instance=ExtResource( 1 )]
collision_layer = 64
collision_mask = 32
monitoring = false
script = ExtResource( 3 )
SPEED = 150
has_kickback = true
kickback_modifier = 2
attack_timeout = 0.2

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, -0.5 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="." index="1"]
texture = ExtResource( 2 )
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
autoplay = "Spin"
anims/RESET = SubResource( 1 )
anims/Spin = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="3"]
position = Vector2( 2.38419e-07, -0.5 )
scale = Vector2( 0.4, 0.45 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource( 4 )
area_mask = 42

[connection signal="area_entered" from="." to="." method="_on_PumpkinBullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PumpkinBullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
